# comfyui_fedcoms_node_pack

./: LICENSE  LICENSE.txt  README.md  __init__.py  enhancedmodelmetadatareader.py  modeldataextractor.py  modelmetadatareader.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
PSscript/: Model_Lister_with_paths.ps1  readme_psscript.txt
Workflow/: FEDCOMS-ModelDataInfo_Example.json  FEDCOMS-ModelDataInfo_Example_01.json
